syntax = "proto3";
option java_package = "com.passport.proto";
option java_outer_classname = "TrusteeMessage";

message Trustee {
    bytes address = 1;
    int64 votes = 2;
    float generateRate = 3;
    int64 status = 4;
    int64 state = 5;
    int64 blockCycle = 6;
}